--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Set Up Flutter
       uses: subosito/flutter-action@v2
       with:
-        flutter-version: stable
+        flutter-version: "3.24.0"
         
     - name: Install Dependencies
       run: flutter pub get
